--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -6,11 +6,6 @@
 #main-wrapper {
   // Positioning
   // Display and Box model
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  min-height: 100vh;
-  justify-content: center;
   // Typography
   // Other
 }
